--- a/public/last_bills.html
+++ b/public/last_bills.html
@@ -3,20 +3,307 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Last Bills</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <title>Bills History</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      body {
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
         font-family: "Poppins", sans-serif;
+      }
+
+      body {
+        background-color: #f9fafc;
+        min-height: 100vh;
+      }
+
+      .header {
+        background-color: #14253a;
+        padding: 16px 20px;
+        display: flex;
+        align-items: center;
+        color: white;
+        font-family: poppins;
+      }
+
+      .back-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 18px;
+        margin-right: 16px;
+        cursor: pointer;
+      }
+
+      .header h1 {
+        font-size: 20px;
+        font-weight: 500;
+      }
+
+      .status-tabs-container {
+        display: flex;
+        padding: 12px 20px;
+        background-color: white;
+        border-bottom: 1px solid #eee;
+      }
+
+      .tab {
+        padding: 8px 20px;
+        margin-right: 10px;
+        border-radius: 20px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .tab.active {
+        background-color: #14253a;
+        color: white;
+      }
+
+      .tab:not(.active) {
+        background-color: #e6e6e6;
+        color: #555;
+      }
+
+      .bills-section {
+        padding: 15px;
+      }
+
+      .bill-card {
+        background-color: white;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        margin-bottom: 15px;
+        overflow: hidden;
+      }
+
+      .bill-date {
+        padding: 12px 15px;
+        font-size: 13px;
+        color: #666;
+        border-bottom: 1px solid #f0f0f0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .bill-date .badge {
+        background-color: #e6e6e6;
+        padding: 4px 12px;
+        border-radius: 12px;
+        font-size: 12px;
+      }
+
+      .bill-content {
+        padding: 15px;
+      }
+
+      .bill-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 12px;
+      }
+
+      .item-details {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .item-name {
+        font-weight: 500;
+        font-size: 15px;
+        margin-bottom: 2px;
+      }
+
+      .item-qty {
+        font-size: 13px;
+        color: #666;
+      }
+
+      .item-price {
+        font-weight: 500;
+        font-size: 15px;
+      }
+
+      .bill-total {
+        padding: 12px 15px;
+        border-top: 1px solid #f0f0f0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         background-color: #f9fafc;
       }
-      /* Additional styling */
+
+      .payment-method {
+        display: flex;
+        align-items: center;
+        font-size: 13px;
+        color: #666;
+      }
+
+      .payment-method i {
+        margin-right: 5px;
+      }
+
+      .total-amount {
+        font-weight: 600;
+        font-size: 16px;
+      }
+
+      .no-bills {
+        text-align: center;
+        padding: 30px;
+        color: #666;
+      }
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1>Last Bills</h1>
-      <!-- Add content for last bills -->
+    <div class="header">
+      <button
+        class="back-button"
+        onclick="window.location.href='dashboard.html'"
+      >
+        <i class="fas fa-arrow-left"></i>
+      </button>
+      <h1>Bills History</h1>
     </div>
+
+    <div class="status-tabs-container">
+      <div class="tab active">All Bills</div>
+      <div class="tab">Cash</div>
+      <div class="tab">UPI</div>
+      <div class="tab">Mixed</div>
+    </div>
+
+    <div class="bills-section" id="bills-container">
+      <!-- Bills will be loaded here -->
+    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Set up tab functionality
+        const tabs = document.querySelectorAll(".tab");
+        tabs.forEach((tab) => {
+          tab.addEventListener("click", function () {
+            tabs.forEach((t) => t.classList.remove("active"));
+            this.classList.add("active");
+            // Here you would add filter functionality
+          });
+        });
+
+        // Fetch bills from the server
+        fetchBills();
+      });
+
+      async function fetchBills() {
+        try {
+          const response = await fetch("https://renderquikkirana.onrender.com/api/bills");
+
+          if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
+          }
+
+          const result = await response.json();
+
+          if (result.success && result.data) {
+            displayBills(result.data);
+          } else {
+            showNoBills("Unable to load bills");
+          }
+        } catch (error) {
+          console.error("Error fetching bills:", error);
+          showNoBills("Connection error. Please try again later.");
+        }
+      }
+
+      function displayBills(bills) {
+        const container = document.getElementById("bills-container");
+
+        if (!bills || bills.length === 0) {
+          showNoBills("No bills found");
+          return;
+        }
+
+        container.innerHTML = "";
+
+        bills.forEach((bill) => {
+          // Format date
+          const date = new Date(bill.billDate);
+          const formattedDate = date.toLocaleString("en-US", {
+            month: "short",
+            day: "numeric",
+            year: "numeric",
+            hour: "2-digit",
+            minute: "2-digit",
+            hour12: true,
+          });
+
+          // Create bill items HTML
+          let itemsHTML = "";
+          if (bill.items && bill.items.length > 0) {
+            bill.items.forEach((item) => {
+              itemsHTML += `
+                            <div class="bill-item">
+                                <div class="item-details">
+                                    <div class="item-name">${item.name}</div>
+                                    <div class="item-qty">Qty: ${
+                                      item.quantity
+                                    }</div>
+                                </div>
+                                <div class="item-price">₹${(
+                                  item.price * item.quantity
+                                ).toFixed(2)}</div>
+                            </div>
+                        `;
+            });
+          }
+
+          // Create the bill card
+          const billCard = document.createElement("div");
+          billCard.className = "bill-card";
+          billCard.innerHTML = `
+                    <div class="bill-date">
+                        <span>${formattedDate}</span>
+                        <span class="badge">${bill.paymentType}</span>
+                    </div>
+                    <div class="bill-content">
+                        ${itemsHTML}
+                    </div>
+                    <div class="bill-total">
+                        <div class="payment-method">
+                            <i class="fas fa-receipt"></i>
+                            Bill ID: ${bill._id.slice(-6)}
+                        </div>
+                        <div class="total-amount">Total: ₹${bill.totalAmount.toFixed(
+                          2
+                        )}</div>
+                    </div>
+                `;
+
+          container.appendChild(billCard);
+        });
+      }
+
+      function showNoBills(message) {
+        const container = document.getElementById("bills-container");
+        container.innerHTML = `
+                <div class="no-bills">
+                    <i class="fas fa-receipt" style="font-size: 24px; margin-bottom: 10px; display: block;"></i>
+                    <p>${message}</p>
+                </div>
+            `;
+      }
+    </script>
   </body>
 </html>
